--- a/new/c++语法知识点/类.md
+++ b/new/c++语法知识点/类.md
@@ -10,7 +10,7 @@ private:
 Log::Log()
 {}
 ```
-
+另外成员变量会自动初始化
 
 - **模板类**
 最大的好处就是可以在初始化时指定数据类型，使支持不同数据类型
@@ -22,5 +22,29 @@ class block_queue{
 
 block_queue<string> *m_log_queue; 
 ```
+- **成员函数**
+成员函数隐含 `this`参数，指向当前的类对象实例
+```cpp
+// main.cpp
+connection_pool *connPool = connection_pool::GetInstance();
+connPool->init("localhost", "lzq", "lzq", "lzqdb", 3306, 8);
 
+// sql_connection_pool.cpp
+void connection_pool::init(string url, string User, string PassWord, string DBName, int Port, unsigned int MaxConn)
+{
+this->url = url;
+this->Port = Port;
+this->User = User;
+this->PassWord = PassWord;
+this->DatabaseName = DBName;
+// ...
+}
+```
+- **内联函数**
+当在函数声明或定义前加上`inline`关键字时
+**建议编译器在调用该函数时，将函数体的代码直接插入到调用点**，而不是像普通函数那样进行一次函数调用（即压栈、跳转、返回等操作）。
+在类内定义成员函数时，默认就是`inline`的
+会使可执行文件变大
+```cpp
 
+```
