--- a/new/c++语法知识点/错误处理.md
+++ b/new/c++语法知识点/错误处理.md
@@ -1,15 +1,66 @@
 #错误处理
-- 系统调用
+
+- **系统调用自带错误处理**
+#游双book
 一般成功都返回0，失败为-1，并且设置errno
 errno 是定义在 errno.h 的全局变量
 ```cpp
 #include <errno.h>
 #include <string.h>
-
 // 系统调用失败后
 if (ret == -1) {
     printf("Error: %s\n", strerror(errno));
     // 或者
     perror("Error message");
+}
+```
+- **exception**
+#tinyWebServer 
+设置 throw exception，然后调用的时候try-catch
+```cpp
+#include <exception>
+sem()
+{
+if (sem_init(&m_sem, 0, 0) != 0)
+	{
+		throw std::exception();
+	}
+}
+
+try {
+sem my_semaphore; // 可能抛出异常
+} catch (const std::exception& e) {
+// 处理异常
+std::cerr << "初始化失败: " << e.what() << std::endl;
+}
+```
+- **assert**
+简单直接，条件为真程序继续执行；否则程序停止，并且输出错误信息
+```cpp
+assert(num_a > 0);
+```
+- **sigaction**或**signal**信号注册函数
+#tinyWebServer 
+一次注册，程序运行期间一直监听信号
+signal更为简单
+```cpp
+// SIGTERM为终止信号（要捕获的信号）
+// handle_term 为自己定义的信号处理函数
+signal(SIGTERM, handle_term);
+```
+sigaction更强大，但是配置麻烦，可以封装如下
+```cpp
+void addsig(int sig, void(handler)(int), bool restart = true) {
+struct sigaction sa;
+memset(&sa, '\0', sizeof(sa));
+sa.sa_handler = handler;
+// 是否设置自动重启
+if (restart)
+sa.sa_flags |= SA_RESTART;
+//在处理当前信号期间，阻塞所有其他信号；确保信号处理的原子性，避免信号处理函数被其他信号中断
+sigfillset(&sa.sa_mask);
+// sigaction 注册成功时返回0，失败则返回-1并设置errno。
+// assert 条件为真：程序继续正常执行；条件为假：程序立即终止，并输出错误信息
+assert(sigaction(sig, &sa, NULL) != -1);
 }
 ```
